Fixed bug that was causing hardfault due to memory problem. All peripherals work, but adding XGL data slows the whole system down a lot. Also I havent figured out yet how to properly change the settings on the ESCs with DSHOT commands.

--- a/stm32f7-drone.ioc
+++ b/stm32f7-drone.ioc
@@ -21,7 +21,7 @@ Dma.I2C1_RX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAl
 Dma.I2C1_TX.2.Direction=DMA_MEMORY_TO_PERIPH
 Dma.I2C1_TX.2.FIFOMode=DMA_FIFOMODE_ENABLE
 Dma.I2C1_TX.2.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
-Dma.I2C1_TX.2.Instance=DMA1_Stream7
+Dma.I2C1_TX.2.Instance=DMA1_Stream6
 Dma.I2C1_TX.2.MemBurst=DMA_MBURST_INC4
 Dma.I2C1_TX.2.MemDataAlignment=DMA_MDATAALIGN_BYTE
 Dma.I2C1_TX.2.MemInc=DMA_MINC_ENABLE
@@ -34,17 +34,34 @@ Dma.I2C1_TX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAl
 Dma.Request0=TIM4_CH1
 Dma.Request1=I2C1_RX
 Dma.Request2=I2C1_TX
-Dma.RequestsNb=3
+Dma.Request3=TIM4_CH2
+Dma.RequestsNb=4
 Dma.TIM4_CH1.0.Direction=DMA_MEMORY_TO_PERIPH
-Dma.TIM4_CH1.0.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.TIM4_CH1.0.FIFOMode=DMA_FIFOMODE_ENABLE
+Dma.TIM4_CH1.0.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
 Dma.TIM4_CH1.0.Instance=DMA1_Stream0
+Dma.TIM4_CH1.0.MemBurst=DMA_MBURST_SINGLE
 Dma.TIM4_CH1.0.MemDataAlignment=DMA_MDATAALIGN_WORD
 Dma.TIM4_CH1.0.MemInc=DMA_MINC_ENABLE
 Dma.TIM4_CH1.0.Mode=DMA_NORMAL
+Dma.TIM4_CH1.0.PeriphBurst=DMA_PBURST_SINGLE
 Dma.TIM4_CH1.0.PeriphDataAlignment=DMA_PDATAALIGN_WORD
 Dma.TIM4_CH1.0.PeriphInc=DMA_PINC_DISABLE
 Dma.TIM4_CH1.0.Priority=DMA_PRIORITY_VERY_HIGH
-Dma.TIM4_CH1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.TIM4_CH1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
+Dma.TIM4_CH2.3.Direction=DMA_MEMORY_TO_PERIPH
+Dma.TIM4_CH2.3.FIFOMode=DMA_FIFOMODE_ENABLE
+Dma.TIM4_CH2.3.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
+Dma.TIM4_CH2.3.Instance=DMA1_Stream3
+Dma.TIM4_CH2.3.MemBurst=DMA_MBURST_SINGLE
+Dma.TIM4_CH2.3.MemDataAlignment=DMA_MDATAALIGN_WORD
+Dma.TIM4_CH2.3.MemInc=DMA_MINC_ENABLE
+Dma.TIM4_CH2.3.Mode=DMA_NORMAL
+Dma.TIM4_CH2.3.PeriphBurst=DMA_PBURST_SINGLE
+Dma.TIM4_CH2.3.PeriphDataAlignment=DMA_PDATAALIGN_WORD
+Dma.TIM4_CH2.3.PeriphInc=DMA_PINC_DISABLE
+Dma.TIM4_CH2.3.Priority=DMA_PRIORITY_VERY_HIGH
+Dma.TIM4_CH2.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 I2C1.IPParameters=Timing,OwnAddress,NoStretchMode
@@ -85,33 +102,32 @@ Mcu.Pin2=PC15-OSC32_OUT
 Mcu.Pin20=PD9
 Mcu.Pin21=PD12
 Mcu.Pin22=PD13
-Mcu.Pin23=PD14
-Mcu.Pin24=PG6
-Mcu.Pin25=PG7
-Mcu.Pin26=PC9
-Mcu.Pin27=PA8
-Mcu.Pin28=PA9
-Mcu.Pin29=PA10
+Mcu.Pin23=PG6
+Mcu.Pin24=PG7
+Mcu.Pin25=PC9
+Mcu.Pin26=PA8
+Mcu.Pin27=PA9
+Mcu.Pin28=PA10
+Mcu.Pin29=PA11
 Mcu.Pin3=PH0-OSC_IN
-Mcu.Pin30=PA11
-Mcu.Pin31=PA12
-Mcu.Pin32=PA13
-Mcu.Pin33=PA14
-Mcu.Pin34=PB3
-Mcu.Pin35=PB7
-Mcu.Pin36=PB8
-Mcu.Pin37=PB9
-Mcu.Pin38=VP_SYS_VS_Systick
-Mcu.Pin39=VP_TIM1_VS_ControllerModeReset
+Mcu.Pin30=PA12
+Mcu.Pin31=PA13
+Mcu.Pin32=PA14
+Mcu.Pin33=PB3
+Mcu.Pin34=PB7
+Mcu.Pin35=PB8
+Mcu.Pin36=PB9
+Mcu.Pin37=VP_SYS_VS_Systick
+Mcu.Pin38=VP_TIM1_VS_ControllerModeReset
+Mcu.Pin39=VP_TIM2_VS_ControllerModeReset
 Mcu.Pin4=PH1-OSC_OUT
-Mcu.Pin40=VP_TIM2_VS_ControllerModeReset
-Mcu.Pin41=VP_TIM2_VS_ClockSourceITR
+Mcu.Pin40=VP_TIM2_VS_ClockSourceITR
 Mcu.Pin5=PA0-WKUP
 Mcu.Pin6=PA3
 Mcu.Pin7=PA6
 Mcu.Pin8=PA7
 Mcu.Pin9=PB0
-Mcu.PinsNb=42
+Mcu.PinsNb=41
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F722ZETx
@@ -119,8 +135,9 @@ MxCube.Version=6.1.0
 MxDb.Version=DB.6.0.10
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.DMA1_Stream0_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.DMA1_Stream3_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.DMA1_Stream5_IRQn=true\:0\:0\:false\:false\:true\:false\:true
-NVIC.DMA1_Stream7_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.DMA1_Stream6_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
@@ -212,9 +229,6 @@ PD12.Signal=S_TIM4_CH1
 PD13.GPIOParameters=GPIO_Label
 PD13.GPIO_Label=TIM4_CH2_MOTOR_1
 PD13.Signal=S_TIM4_CH2
-PD14.GPIOParameters=GPIO_Label
-PD14.GPIO_Label=TIM4_CH3_MOTOR_2
-PD14.Signal=S_TIM4_CH3
 PD8.GPIOParameters=GPIO_Label
 PD8.GPIO_Label=STLK_RX [STM32F103CBT6_PA3]
 PD8.Locked=true
@@ -395,10 +409,8 @@ SH.S_TIM3_CH4.0=TIM3_CH4,PWM Generation4 CH4
 SH.S_TIM3_CH4.ConfNb=1
 SH.S_TIM4_CH1.0=TIM4_CH1,Output Compare1 CH1
 SH.S_TIM4_CH1.ConfNb=1
-SH.S_TIM4_CH2.0=TIM4_CH2,PWM Generation2 CH2
+SH.S_TIM4_CH2.0=TIM4_CH2,Output Compare2 CH2
 SH.S_TIM4_CH2.ConfNb=1
-SH.S_TIM4_CH3.0=TIM4_CH3,PWM Generation3 CH3
-SH.S_TIM4_CH3.ConfNb=1
 TIM1.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM1.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
 TIM1.Channel-Input_Capture2_from_TI2=TIM_CHANNEL_2
@@ -409,8 +421,8 @@ TIM1.ICPolarity_CH2=TIM_INPUTCHANNELPOLARITY_FALLING
 TIM1.ICPolarity_CH3=TIM_INPUTCHANNELPOLARITY_FALLING
 TIM1.ICPolarity_CH4=TIM_INPUTCHANNELPOLARITY_FALLING
 TIM1.IPParameters=Prescaler,Period,AutoReloadPreload,Channel-Input_Capture2_from_TI2,Channel-Input_Capture3_from_TI3,Channel-Input_Capture4_from_TI4,ICPolarity_CH1,ICPolarity_CH2,ICPolarity_CH3,ICPolarity_CH4,Slave_TriggerPolarity,Channel-Input_Capture1_from_TI1
-TIM1.Period=1999
-TIM1.Prescaler=1079
+TIM1.Period=9999
+TIM1.Prescaler=215
 TIM1.Slave_TriggerPolarity=TIM_TRIGGERPOLARITY_NONINVERTED
 TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM2.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
@@ -418,8 +430,8 @@ TIM2.Channel-Input_Capture4_from_TI4=TIM_CHANNEL_4
 TIM2.ICPolarity_CH1=TIM_INPUTCHANNELPOLARITY_FALLING
 TIM2.ICPolarity_CH4=TIM_INPUTCHANNELPOLARITY_FALLING
 TIM2.IPParameters=Prescaler,Period,AutoReloadPreload,TIM_MasterOutputTrigger,Channel-Input_Capture1_from_TI1,Channel-Input_Capture4_from_TI4,ICPolarity_CH1,ICPolarity_CH4
-TIM2.Period=1999
-TIM2.Prescaler=1079
+TIM2.Period=19999
+TIM2.Prescaler=215
 TIM2.TIM_MasterOutputTrigger=TIM_TRGO_RESET
 TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
@@ -429,15 +441,14 @@ TIM3.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
 TIM3.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,Channel-PWM Generation4 CH4,Period,AutoReloadPreload
 TIM3.Period=359
 TIM4.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
-TIM4.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
 TIM4.Channel-Output\ Compare1\ CH1=TIM_CHANNEL_1
-TIM4.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
-TIM4.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
-TIM4.IPParameters=Period,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,AutoReloadPreload,OCFastMode_PWM-PWM Generation3 CH3,OC3Preload_PWM,OC2Preload_PWM,Channel-Input_Capture1_from_TI1,Channel-Output Compare1 CH1
-TIM4.OC2Preload_PWM=ENABLE
-TIM4.OC3Preload_PWM=ENABLE
-TIM4.OCFastMode_PWM-PWM\ Generation3\ CH3=TIM_OCFAST_DISABLE
+TIM4.Channel-Output\ Compare2\ CH2=TIM_CHANNEL_2
+TIM4.IPParameters=Period,AutoReloadPreload,Channel-Output Compare1 CH1,OCMode_1,Channel-Output Compare2 CH2,OCMode_2,Pulse-Output Compare1 CH1,Pulse-Output Compare2 CH2
+TIM4.OCMode_1=TIM_OCMODE_ACTIVE
+TIM4.OCMode_2=TIM_OCMODE_ACTIVE
 TIM4.Period=359
+TIM4.Pulse-Output\ Compare1\ CH1=1
+TIM4.Pulse-Output\ Compare2\ CH2=1
 USART3.IPParameters=VirtualMode-Asynchronous
 USART3.VirtualMode-Asynchronous=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
