Each ESC now has its own dedicated DMA stream.

--- a/stm32f7-drone.ioc
+++ b/stm32f7-drone.ioc
@@ -5,50 +5,52 @@ ADC1.NbrOfConversionFlag=1
 ADC1.Rank-2\#ChannelRegularConversion=1
 ADC1.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
 ADC1.master=1
-Dma.I2C1_RX.1.Direction=DMA_PERIPH_TO_MEMORY
-Dma.I2C1_RX.1.FIFOMode=DMA_FIFOMODE_ENABLE
-Dma.I2C1_RX.1.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
-Dma.I2C1_RX.1.Instance=DMA1_Stream5
-Dma.I2C1_RX.1.MemBurst=DMA_MBURST_INC4
-Dma.I2C1_RX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.I2C1_RX.1.MemInc=DMA_MINC_ENABLE
-Dma.I2C1_RX.1.Mode=DMA_NORMAL
-Dma.I2C1_RX.1.PeriphBurst=DMA_PBURST_INC4
-Dma.I2C1_RX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.I2C1_RX.1.PeriphInc=DMA_PINC_DISABLE
-Dma.I2C1_RX.1.Priority=DMA_PRIORITY_VERY_HIGH
-Dma.I2C1_RX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
-Dma.I2C1_TX.2.Direction=DMA_MEMORY_TO_PERIPH
-Dma.I2C1_TX.2.FIFOMode=DMA_FIFOMODE_ENABLE
-Dma.I2C1_TX.2.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
-Dma.I2C1_TX.2.Instance=DMA1_Stream6
-Dma.I2C1_TX.2.MemBurst=DMA_MBURST_INC4
-Dma.I2C1_TX.2.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.I2C1_TX.2.MemInc=DMA_MINC_ENABLE
-Dma.I2C1_TX.2.Mode=DMA_NORMAL
-Dma.I2C1_TX.2.PeriphBurst=DMA_PBURST_INC4
-Dma.I2C1_TX.2.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.I2C1_TX.2.PeriphInc=DMA_PINC_DISABLE
-Dma.I2C1_TX.2.Priority=DMA_PRIORITY_VERY_HIGH
-Dma.I2C1_TX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
-Dma.Request0=TIM4_CH1
-Dma.Request1=I2C1_RX
-Dma.Request2=I2C1_TX
+Dma.I2C1_RX.0.Direction=DMA_PERIPH_TO_MEMORY
+Dma.I2C1_RX.0.FIFOMode=DMA_FIFOMODE_ENABLE
+Dma.I2C1_RX.0.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
+Dma.I2C1_RX.0.Instance=DMA1_Stream5
+Dma.I2C1_RX.0.MemBurst=DMA_MBURST_INC4
+Dma.I2C1_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.I2C1_RX.0.MemInc=DMA_MINC_ENABLE
+Dma.I2C1_RX.0.Mode=DMA_NORMAL
+Dma.I2C1_RX.0.PeriphBurst=DMA_PBURST_INC4
+Dma.I2C1_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.I2C1_RX.0.PeriphInc=DMA_PINC_DISABLE
+Dma.I2C1_RX.0.Priority=DMA_PRIORITY_HIGH
+Dma.I2C1_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
+Dma.I2C1_TX.1.Direction=DMA_MEMORY_TO_PERIPH
+Dma.I2C1_TX.1.FIFOMode=DMA_FIFOMODE_ENABLE
+Dma.I2C1_TX.1.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
+Dma.I2C1_TX.1.Instance=DMA1_Stream6
+Dma.I2C1_TX.1.MemBurst=DMA_MBURST_INC4
+Dma.I2C1_TX.1.MemDataAlignment=DMA_MDATAALIGN_WORD
+Dma.I2C1_TX.1.MemInc=DMA_MINC_ENABLE
+Dma.I2C1_TX.1.Mode=DMA_NORMAL
+Dma.I2C1_TX.1.PeriphBurst=DMA_PBURST_INC4
+Dma.I2C1_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_WORD
+Dma.I2C1_TX.1.PeriphInc=DMA_PINC_DISABLE
+Dma.I2C1_TX.1.Priority=DMA_PRIORITY_HIGH
+Dma.I2C1_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
+Dma.Request0=I2C1_RX
+Dma.Request1=I2C1_TX
+Dma.Request2=TIM4_CH1
 Dma.Request3=TIM4_CH2
-Dma.RequestsNb=4
-Dma.TIM4_CH1.0.Direction=DMA_MEMORY_TO_PERIPH
-Dma.TIM4_CH1.0.FIFOMode=DMA_FIFOMODE_ENABLE
-Dma.TIM4_CH1.0.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
-Dma.TIM4_CH1.0.Instance=DMA1_Stream0
-Dma.TIM4_CH1.0.MemBurst=DMA_MBURST_SINGLE
-Dma.TIM4_CH1.0.MemDataAlignment=DMA_MDATAALIGN_WORD
-Dma.TIM4_CH1.0.MemInc=DMA_MINC_ENABLE
-Dma.TIM4_CH1.0.Mode=DMA_NORMAL
-Dma.TIM4_CH1.0.PeriphBurst=DMA_PBURST_SINGLE
-Dma.TIM4_CH1.0.PeriphDataAlignment=DMA_PDATAALIGN_WORD
-Dma.TIM4_CH1.0.PeriphInc=DMA_PINC_DISABLE
-Dma.TIM4_CH1.0.Priority=DMA_PRIORITY_VERY_HIGH
-Dma.TIM4_CH1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
+Dma.Request4=TIM4_CH3
+Dma.Request5=TIM5_CH2
+Dma.RequestsNb=6
+Dma.TIM4_CH1.2.Direction=DMA_MEMORY_TO_PERIPH
+Dma.TIM4_CH1.2.FIFOMode=DMA_FIFOMODE_ENABLE
+Dma.TIM4_CH1.2.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
+Dma.TIM4_CH1.2.Instance=DMA1_Stream0
+Dma.TIM4_CH1.2.MemBurst=DMA_MBURST_SINGLE
+Dma.TIM4_CH1.2.MemDataAlignment=DMA_MDATAALIGN_WORD
+Dma.TIM4_CH1.2.MemInc=DMA_MINC_ENABLE
+Dma.TIM4_CH1.2.Mode=DMA_CIRCULAR
+Dma.TIM4_CH1.2.PeriphBurst=DMA_PBURST_SINGLE
+Dma.TIM4_CH1.2.PeriphDataAlignment=DMA_PDATAALIGN_WORD
+Dma.TIM4_CH1.2.PeriphInc=DMA_PINC_DISABLE
+Dma.TIM4_CH1.2.Priority=DMA_PRIORITY_VERY_HIGH
+Dma.TIM4_CH1.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
 Dma.TIM4_CH2.3.Direction=DMA_MEMORY_TO_PERIPH
 Dma.TIM4_CH2.3.FIFOMode=DMA_FIFOMODE_ENABLE
 Dma.TIM4_CH2.3.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
@@ -56,12 +58,38 @@ Dma.TIM4_CH2.3.Instance=DMA1_Stream3
 Dma.TIM4_CH2.3.MemBurst=DMA_MBURST_SINGLE
 Dma.TIM4_CH2.3.MemDataAlignment=DMA_MDATAALIGN_WORD
 Dma.TIM4_CH2.3.MemInc=DMA_MINC_ENABLE
-Dma.TIM4_CH2.3.Mode=DMA_NORMAL
+Dma.TIM4_CH2.3.Mode=DMA_CIRCULAR
 Dma.TIM4_CH2.3.PeriphBurst=DMA_PBURST_SINGLE
 Dma.TIM4_CH2.3.PeriphDataAlignment=DMA_PDATAALIGN_WORD
 Dma.TIM4_CH2.3.PeriphInc=DMA_PINC_DISABLE
 Dma.TIM4_CH2.3.Priority=DMA_PRIORITY_VERY_HIGH
 Dma.TIM4_CH2.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
+Dma.TIM4_CH3.4.Direction=DMA_MEMORY_TO_PERIPH
+Dma.TIM4_CH3.4.FIFOMode=DMA_FIFOMODE_ENABLE
+Dma.TIM4_CH3.4.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
+Dma.TIM4_CH3.4.Instance=DMA1_Stream7
+Dma.TIM4_CH3.4.MemBurst=DMA_MBURST_SINGLE
+Dma.TIM4_CH3.4.MemDataAlignment=DMA_MDATAALIGN_WORD
+Dma.TIM4_CH3.4.MemInc=DMA_MINC_ENABLE
+Dma.TIM4_CH3.4.Mode=DMA_CIRCULAR
+Dma.TIM4_CH3.4.PeriphBurst=DMA_PBURST_SINGLE
+Dma.TIM4_CH3.4.PeriphDataAlignment=DMA_PDATAALIGN_WORD
+Dma.TIM4_CH3.4.PeriphInc=DMA_PINC_DISABLE
+Dma.TIM4_CH3.4.Priority=DMA_PRIORITY_VERY_HIGH
+Dma.TIM4_CH3.4.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
+Dma.TIM5_CH2.5.Direction=DMA_MEMORY_TO_PERIPH
+Dma.TIM5_CH2.5.FIFOMode=DMA_FIFOMODE_ENABLE
+Dma.TIM5_CH2.5.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
+Dma.TIM5_CH2.5.Instance=DMA1_Stream4
+Dma.TIM5_CH2.5.MemBurst=DMA_MBURST_SINGLE
+Dma.TIM5_CH2.5.MemDataAlignment=DMA_MDATAALIGN_WORD
+Dma.TIM5_CH2.5.MemInc=DMA_MINC_ENABLE
+Dma.TIM5_CH2.5.Mode=DMA_CIRCULAR
+Dma.TIM5_CH2.5.PeriphBurst=DMA_PBURST_SINGLE
+Dma.TIM5_CH2.5.PeriphDataAlignment=DMA_PDATAALIGN_WORD
+Dma.TIM5_CH2.5.PeriphInc=DMA_PINC_DISABLE
+Dma.TIM5_CH2.5.Priority=DMA_PRIORITY_VERY_HIGH
+Dma.TIM5_CH2.5.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 I2C1.IPParameters=Timing,OwnAddress,NoStretchMode
@@ -73,8 +101,9 @@ Mcu.Family=STM32F7
 Mcu.IP0=ADC1
 Mcu.IP1=CORTEX_M7
 Mcu.IP10=TIM4
-Mcu.IP11=USART3
-Mcu.IP12=USB_OTG_FS
+Mcu.IP11=TIM5
+Mcu.IP12=USART3
+Mcu.IP13=USB_OTG_FS
 Mcu.IP2=DMA
 Mcu.IP3=I2C1
 Mcu.IP4=NVIC
@@ -83,51 +112,53 @@ Mcu.IP6=SYS
 Mcu.IP7=TIM1
 Mcu.IP8=TIM2
 Mcu.IP9=TIM3
-Mcu.IPNb=13
+Mcu.IPNb=14
 Mcu.Name=STM32F722Z(C-E)Tx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PB1
-Mcu.Pin11=PF14
-Mcu.Pin12=PF15
-Mcu.Pin13=PE7
-Mcu.Pin14=PE9
-Mcu.Pin15=PE11
-Mcu.Pin16=PE13
-Mcu.Pin17=PE14
-Mcu.Pin18=PB14
-Mcu.Pin19=PD8
+Mcu.Pin10=PB0
+Mcu.Pin11=PB1
+Mcu.Pin12=PF14
+Mcu.Pin13=PF15
+Mcu.Pin14=PE7
+Mcu.Pin15=PE9
+Mcu.Pin16=PE11
+Mcu.Pin17=PE13
+Mcu.Pin18=PE14
+Mcu.Pin19=PB14
 Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=PD9
-Mcu.Pin21=PD12
-Mcu.Pin22=PD13
-Mcu.Pin23=PG6
-Mcu.Pin24=PG7
-Mcu.Pin25=PC9
-Mcu.Pin26=PA8
-Mcu.Pin27=PA9
-Mcu.Pin28=PA10
-Mcu.Pin29=PA11
+Mcu.Pin20=PD8
+Mcu.Pin21=PD9
+Mcu.Pin22=PD12
+Mcu.Pin23=PD13
+Mcu.Pin24=PD14
+Mcu.Pin25=PG2
+Mcu.Pin26=PG6
+Mcu.Pin27=PG7
+Mcu.Pin28=PC9
+Mcu.Pin29=PA8
 Mcu.Pin3=PH0-OSC_IN
-Mcu.Pin30=PA12
-Mcu.Pin31=PA13
-Mcu.Pin32=PA14
-Mcu.Pin33=PB3
-Mcu.Pin34=PB7
-Mcu.Pin35=PB8
-Mcu.Pin36=PB9
-Mcu.Pin37=VP_SYS_VS_Systick
-Mcu.Pin38=VP_TIM1_VS_ControllerModeReset
-Mcu.Pin39=VP_TIM2_VS_ControllerModeReset
+Mcu.Pin30=PA9
+Mcu.Pin31=PA10
+Mcu.Pin32=PA11
+Mcu.Pin33=PA12
+Mcu.Pin34=PA13
+Mcu.Pin35=PA14
+Mcu.Pin36=PB7
+Mcu.Pin37=PB8
+Mcu.Pin38=PB9
+Mcu.Pin39=VP_SYS_VS_Systick
 Mcu.Pin4=PH1-OSC_OUT
-Mcu.Pin40=VP_TIM2_VS_ClockSourceITR
+Mcu.Pin40=VP_TIM1_VS_ControllerModeReset
+Mcu.Pin41=VP_TIM2_VS_ControllerModeReset
+Mcu.Pin42=VP_TIM2_VS_ClockSourceITR
 Mcu.Pin5=PA0-WKUP
-Mcu.Pin6=PA3
-Mcu.Pin7=PA6
-Mcu.Pin8=PA7
-Mcu.Pin9=PB0
-Mcu.PinsNb=41
+Mcu.Pin6=PA1
+Mcu.Pin7=PA3
+Mcu.Pin8=PA6
+Mcu.Pin9=PA7
+Mcu.PinsNb=43
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F722ZETx
@@ -136,8 +167,10 @@ MxDb.Version=DB.6.0.10
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.DMA1_Stream0_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.DMA1_Stream3_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.DMA1_Stream4_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.DMA1_Stream5_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.DMA1_Stream6_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.DMA1_Stream7_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
@@ -149,6 +182,8 @@ NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 PA0-WKUP.Signal=S_TIM2_CH1_ETR
+PA1.Locked=true
+PA1.Signal=S_TIM5_CH2
 PA10.Locked=true
 PA10.Mode=OTG/Dual_Role_Device
 PA10.Signal=USB_OTG_FS_ID
@@ -199,8 +234,6 @@ PB14.GPIOParameters=GPIO_Label
 PB14.GPIO_Label=LD3 [Red]
 PB14.Locked=true
 PB14.Signal=GPIO_Output
-PB3.Locked=true
-PB3.Signal=SYS_JTDO-SWO
 PB7.GPIOParameters=GPIO_Label
 PB7.GPIO_Label=LD2 [Blue]
 PB7.Locked=true
@@ -229,6 +262,8 @@ PD12.Signal=S_TIM4_CH1
 PD13.GPIOParameters=GPIO_Label
 PD13.GPIO_Label=TIM4_CH2_MOTOR_1
 PD13.Signal=S_TIM4_CH2
+PD14.Locked=true
+PD14.Signal=S_TIM4_CH3
 PD8.GPIOParameters=GPIO_Label
 PD8.GPIO_Label=STLK_RX [STM32F103CBT6_PA3]
 PD8.Locked=true
@@ -248,6 +283,8 @@ PF14.Locked=true
 PF14.Signal=GPIO_Input
 PF15.Locked=true
 PF15.Signal=GPIO_Input
+PG2.Locked=true
+PG2.Signal=FMC_A12
 PG6.Locked=true
 PG6.Signal=GPIO_Output
 PG7.GPIOParameters=GPIO_Label
@@ -289,7 +326,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_USART3_UART_Init-USART3-false-HAL-true,5-MX_USB_OTG_FS_USB_Init-USB_OTG_FS-false-HAL-true,6-MX_TIM4_Init-TIM4-false-HAL-true,7-MX_ADC1_Init-ADC1-false-HAL-true,8-MX_I2C1_Init-I2C1-false-HAL-true,9-MX_TIM3_Init-TIM3-false-HAL-true,10-MX_TIM2_Init-TIM2-false-HAL-true,11-MX_TIM1_Init-TIM1-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_USART3_UART_Init-USART3-false-HAL-true,5-MX_USB_OTG_FS_USB_Init-USB_OTG_FS-false-HAL-true,6-MX_TIM4_Init-TIM4-false-HAL-true,7-MX_ADC1_Init-ADC1-false-HAL-true,8-MX_I2C1_Init-I2C1-false-HAL-true,9-MX_TIM3_Init-TIM3-false-HAL-true,10-MX_TIM2_Init-TIM2-false-HAL-true,11-MX_TIM1_Init-TIM1-false-HAL-true,12-MX_TIM5_Init-TIM5-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.48MHZClocksFreq_Value=24000000
 RCC.ADC12outputFreq_Value=72000000
 RCC.ADC34outputFreq_Value=72000000
@@ -383,6 +420,8 @@ RCC.VcooutputI2S=48000000
 RCC.WatchDogFreq_Value=32000
 SH.ADCx_IN9.0=ADC1_IN9,IN9
 SH.ADCx_IN9.ConfNb=1
+SH.FMC_A12.0=FMC_A12
+SH.FMC_A12.ConfNb=1
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
 SH.S_TIM1_CH1.0=TIM1_CH1,Input_Capture1_from_TI1
@@ -411,6 +450,10 @@ SH.S_TIM4_CH1.0=TIM4_CH1,Output Compare1 CH1
 SH.S_TIM4_CH1.ConfNb=1
 SH.S_TIM4_CH2.0=TIM4_CH2,Output Compare2 CH2
 SH.S_TIM4_CH2.ConfNb=1
+SH.S_TIM4_CH3.0=TIM4_CH3,Output Compare3 CH3
+SH.S_TIM4_CH3.ConfNb=1
+SH.S_TIM5_CH2.0=TIM5_CH2,Output Compare2 CH2
+SH.S_TIM5_CH2.ConfNb=1
 TIM1.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM1.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
 TIM1.Channel-Input_Capture2_from_TI2=TIM_CHANNEL_2
@@ -429,8 +472,8 @@ TIM2.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
 TIM2.Channel-Input_Capture4_from_TI4=TIM_CHANNEL_4
 TIM2.ICPolarity_CH1=TIM_INPUTCHANNELPOLARITY_FALLING
 TIM2.ICPolarity_CH4=TIM_INPUTCHANNELPOLARITY_FALLING
-TIM2.IPParameters=Prescaler,Period,AutoReloadPreload,TIM_MasterOutputTrigger,Channel-Input_Capture1_from_TI1,Channel-Input_Capture4_from_TI4,ICPolarity_CH1,ICPolarity_CH4
-TIM2.Period=19999
+TIM2.IPParameters=Prescaler,Period,AutoReloadPreload,TIM_MasterOutputTrigger,Channel-Input_Capture1_from_TI1,ICPolarity_CH1,Channel-Input_Capture4_from_TI4,ICPolarity_CH4
+TIM2.Period=9999
 TIM2.Prescaler=215
 TIM2.TIM_MasterOutputTrigger=TIM_TRGO_RESET
 TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
@@ -443,12 +486,21 @@ TIM3.Period=359
 TIM4.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM4.Channel-Output\ Compare1\ CH1=TIM_CHANNEL_1
 TIM4.Channel-Output\ Compare2\ CH2=TIM_CHANNEL_2
-TIM4.IPParameters=Period,AutoReloadPreload,Channel-Output Compare1 CH1,OCMode_1,Channel-Output Compare2 CH2,OCMode_2,Pulse-Output Compare1 CH1,Pulse-Output Compare2 CH2
+TIM4.Channel-Output\ Compare3\ CH3=TIM_CHANNEL_3
+TIM4.IPParameters=Period,AutoReloadPreload,Channel-Output Compare1 CH1,OCMode_1,Channel-Output Compare2 CH2,OCMode_2,Pulse-Output Compare1 CH1,Pulse-Output Compare2 CH2,Channel-Output Compare3 CH3,OCMode_3,Pulse-Output Compare3 CH3
 TIM4.OCMode_1=TIM_OCMODE_ACTIVE
 TIM4.OCMode_2=TIM_OCMODE_ACTIVE
+TIM4.OCMode_3=TIM_OCMODE_ACTIVE
 TIM4.Period=359
 TIM4.Pulse-Output\ Compare1\ CH1=1
 TIM4.Pulse-Output\ Compare2\ CH2=1
+TIM4.Pulse-Output\ Compare3\ CH3=1
+TIM5.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM5.Channel-Output\ Compare2\ CH2=TIM_CHANNEL_2
+TIM5.IPParameters=Channel-Output Compare2 CH2,Period,Pulse-Output Compare2 CH2,OCMode_2,AutoReloadPreload
+TIM5.OCMode_2=TIM_OCMODE_ACTIVE
+TIM5.Period=359
+TIM5.Pulse-Output\ Compare2\ CH2=1
 USART3.IPParameters=VirtualMode-Asynchronous
 USART3.VirtualMode-Asynchronous=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
