Tried changing DMA to non-circular to attempt to send commands more reliably. So far I have not had good luck with the commands setting reliably. I can get them to work sometimes, but it seems even more unreliable now.

--- a/stm32f7-drone.ioc
+++ b/stm32f7-drone.ioc
@@ -45,7 +45,7 @@ Dma.TIM4_CH1.2.Instance=DMA1_Stream0
 Dma.TIM4_CH1.2.MemBurst=DMA_MBURST_SINGLE
 Dma.TIM4_CH1.2.MemDataAlignment=DMA_MDATAALIGN_WORD
 Dma.TIM4_CH1.2.MemInc=DMA_MINC_ENABLE
-Dma.TIM4_CH1.2.Mode=DMA_CIRCULAR
+Dma.TIM4_CH1.2.Mode=DMA_NORMAL
 Dma.TIM4_CH1.2.PeriphBurst=DMA_PBURST_SINGLE
 Dma.TIM4_CH1.2.PeriphDataAlignment=DMA_PDATAALIGN_WORD
 Dma.TIM4_CH1.2.PeriphInc=DMA_PINC_DISABLE
@@ -58,7 +58,7 @@ Dma.TIM4_CH2.3.Instance=DMA1_Stream3
 Dma.TIM4_CH2.3.MemBurst=DMA_MBURST_SINGLE
 Dma.TIM4_CH2.3.MemDataAlignment=DMA_MDATAALIGN_WORD
 Dma.TIM4_CH2.3.MemInc=DMA_MINC_ENABLE
-Dma.TIM4_CH2.3.Mode=DMA_CIRCULAR
+Dma.TIM4_CH2.3.Mode=DMA_NORMAL
 Dma.TIM4_CH2.3.PeriphBurst=DMA_PBURST_SINGLE
 Dma.TIM4_CH2.3.PeriphDataAlignment=DMA_PDATAALIGN_WORD
 Dma.TIM4_CH2.3.PeriphInc=DMA_PINC_DISABLE
@@ -71,7 +71,7 @@ Dma.TIM4_CH3.4.Instance=DMA1_Stream7
 Dma.TIM4_CH3.4.MemBurst=DMA_MBURST_SINGLE
 Dma.TIM4_CH3.4.MemDataAlignment=DMA_MDATAALIGN_WORD
 Dma.TIM4_CH3.4.MemInc=DMA_MINC_ENABLE
-Dma.TIM4_CH3.4.Mode=DMA_CIRCULAR
+Dma.TIM4_CH3.4.Mode=DMA_NORMAL
 Dma.TIM4_CH3.4.PeriphBurst=DMA_PBURST_SINGLE
 Dma.TIM4_CH3.4.PeriphDataAlignment=DMA_PDATAALIGN_WORD
 Dma.TIM4_CH3.4.PeriphInc=DMA_PINC_DISABLE
@@ -84,7 +84,7 @@ Dma.TIM5_CH2.5.Instance=DMA1_Stream4
 Dma.TIM5_CH2.5.MemBurst=DMA_MBURST_SINGLE
 Dma.TIM5_CH2.5.MemDataAlignment=DMA_MDATAALIGN_WORD
 Dma.TIM5_CH2.5.MemInc=DMA_MINC_ENABLE
-Dma.TIM5_CH2.5.Mode=DMA_CIRCULAR
+Dma.TIM5_CH2.5.Mode=DMA_NORMAL
 Dma.TIM5_CH2.5.PeriphBurst=DMA_PBURST_SINGLE
 Dma.TIM5_CH2.5.PeriphDataAlignment=DMA_PDATAALIGN_WORD
 Dma.TIM5_CH2.5.PeriphInc=DMA_PINC_DISABLE
